feat: design system UI minimalista + refactor viste JavaFX + menu avvio interattivo
- styles.css con palette/token (accento verde, card, badge scadenza)
- UiKit: componenti riutilizzabili (sidebar, pagina, card) - DRY
- Refactor tutte le viste JavaFX: sidebar + card + griglia + form
- Dispensa: contatori, badge scadenza, filtro posizione, ComboBox
- Avvio interattivo (AvvioMenu/Runner/ApplicationModeBean) con doppia interfaccia
- Demo data arricchita (8 prodotti dispensa Mario)
- DemoDriver aggiornato alle nuove card